src/main/java/com/example/clothingstore/utils/error/EmailInvalidException.java
package com.example.clothingstore.utils.error;

public class EmailInvalidException extends Exception {
    public EmailInvalidException(String message) {
        super(message);
    }
}
